annimate_core/tests/snapshots/exportable_anno_keys__empty.snap
---
source: annimate_core/tests/exportable_anno_keys.rs
info:
  corpus_paths:
    - empty_graphml.zip
  corpus_names:
    - empty
---
ExportableNodeAnnoKeys {
    corpus: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
    ],
    doc: [],
    node: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
    ],
}
