annimate_core/tests/snapshots/exportable_anno_keys__pcc2.snap
---
source: annimate_core/tests/exportable_anno_keys.rs
info:
  corpus_paths:
    - pcc2_v7_relANNIS.zip
  corpus_names:
    - pcc2
---
ExportableNodeAnnoKeys {
    corpus: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "URL",
                ns: "",
            },
            display_name: "URL",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "annotation_description",
                ns: "",
            },
            display_name: "annotation_description",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "annotation_levels",
                ns: "",
            },
            display_name: "annotation_levels",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "full_name",
                ns: "",
            },
            display_name: "full_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "language",
                ns: "",
            },
            display_name: "language",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "relannis-version",
                ns: "annis",
            },
            display_name: "relannis-version",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "source",
                ns: "",
            },
            display_name: "source",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "version",
                ns: "",
            },
            display_name: "version",
        },
    ],
    doc: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Dokumentname",
                ns: "",
            },
            display_name: "Dokumentname",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Genre",
                ns: "",
            },
            display_name: "Genre",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Titel",
                ns: "",
            },
            display_name: "Titel",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "doc",
                ns: "annis",
            },
            display_name: "doc",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
    ],
    node: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Dokumentname",
                ns: "",
            },
            display_name: "Dokumentname",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Focus_newInf",
                ns: "exmaralda",
            },
            display_name: "Focus_newInf",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Genre",
                ns: "",
            },
            display_name: "Genre",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Inf-Stat",
                ns: "exmaralda",
            },
            display_name: "Inf-Stat",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "NP",
                ns: "exmaralda",
            },
            display_name: "NP",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "PP",
                ns: "exmaralda",
            },
            display_name: "PP",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Sent",
                ns: "exmaralda",
            },
            display_name: "Sent",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Titel",
                ns: "",
            },
            display_name: "Titel",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "Topic",
                ns: "exmaralda",
            },
            display_name: "Topic",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "URL",
                ns: "",
            },
            display_name: "URL",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "ambiguity",
                ns: "mmax",
            },
            display_name: "ambiguity",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "anaphor_type",
                ns: "mmax",
            },
            display_name: "anaphor_type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "annotation_description",
                ns: "",
            },
            display_name: "annotation_description",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "annotation_levels",
                ns: "",
            },
            display_name: "annotation_levels",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "cat",
                ns: "tiger",
            },
            display_name: "cat",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "complex_np",
                ns: "mmax",
            },
            display_name: "complex_np",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "dir_speech",
                ns: "mmax",
            },
            display_name: "dir_speech",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "doc",
                ns: "annis",
            },
            display_name: "doc",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "file",
                ns: "annis",
            },
            display_name: "file",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "full_name",
                ns: "",
            },
            display_name: "full_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "grammatical_role",
                ns: "mmax",
            },
            display_name: "grammatical_role",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "heading",
                ns: "exmaralda",
            },
            display_name: "heading",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "kind",
                ns: "rst",
            },
            display_name: "kind",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "language",
                ns: "",
            },
            display_name: "language",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "layer",
                ns: "annis",
            },
            display_name: "layer",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "lemma",
                ns: "tiger",
            },
            display_name: "lemma",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "type",
                ns: "mmax",
            },
            display_name: "mmax:type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "morph",
                ns: "tiger",
            },
            display_name: "morph",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "np_form",
                ns: "mmax",
            },
            display_name: "np_form",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "phrase_type",
                ns: "mmax",
            },
            display_name: "phrase_type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "pos",
                ns: "tiger",
            },
            display_name: "pos",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "referentiality",
                ns: "mmax",
            },
            display_name: "referentiality",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "relannis-version",
                ns: "annis",
            },
            display_name: "relannis-version",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "type",
                ns: "rst",
            },
            display_name: "rst:type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "source",
                ns: "",
            },
            display_name: "source",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "tok",
                ns: "annis",
            },
            display_name: "tok",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "tok-whitespace-after",
                ns: "annis",
            },
            display_name: "tok-whitespace-after",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "version",
                ns: "",
            },
            display_name: "version",
        },
    ],
}
