annimate_core/tests/snapshots/exportable_anno_keys__subtok_conflicting_name.snap
---
source: annimate_core/tests/exportable_anno_keys.rs
info:
  corpus_paths:
    - subtok.demo_relANNIS.zip
    - subtok.demo_relANNIS.zip
  corpus_names:
    - subtok.demo
    - subtok.demo (1)
---
ExportableAnnoKeys {
    corpus: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "description",
                ns: "",
            },
            display_name: "description",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "language",
                ns: "",
            },
            display_name: "language",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "project",
                ns: "",
            },
            display_name: "project",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "relannis-version",
                ns: "annis",
            },
            display_name: "relannis-version",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "respStmt",
                ns: "",
            },
            display_name: "respStmt",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "version",
                ns: "",
            },
            display_name: "version",
        },
    ],
    doc: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "doc",
                ns: "annis",
            },
            display_name: "doc",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
    ],
    node: [
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "description",
                ns: "",
            },
            display_name: "description",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "diplomatic",
                ns: "structure",
            },
            display_name: "diplomatic",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "doc",
                ns: "annis",
            },
            display_name: "doc",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "file",
                ns: "annis",
            },
            display_name: "file",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "language",
                ns: "",
            },
            display_name: "language",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "layer",
                ns: "annis",
            },
            display_name: "layer",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "lemma",
                ns: "grammar",
            },
            display_name: "lemma",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "line",
                ns: "structure",
            },
            display_name: "line",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_name",
                ns: "annis",
            },
            display_name: "node_name",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "node_type",
                ns: "annis",
            },
            display_name: "node_type",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "norm",
                ns: "grammar",
            },
            display_name: "norm",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "page",
                ns: "structure",
            },
            display_name: "page",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "pos",
                ns: "grammar",
            },
            display_name: "pos",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "project",
                ns: "",
            },
            display_name: "project",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "relannis-version",
                ns: "annis",
            },
            display_name: "relannis-version",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "rend",
                ns: "structure",
            },
            display_name: "rend",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "respStmt",
                ns: "",
            },
            display_name: "respStmt",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "tok",
                ns: "annis",
            },
            display_name: "tok",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "tok-whitespace-after",
                ns: "annis",
            },
            display_name: "tok-whitespace-after",
        },
        ExportableAnnoKey {
            anno_key: AnnoKey {
                name: "version",
                ns: "",
            },
            display_name: "version",
        },
    ],
}
